@@ -9,10 +9,12 @@ v4.3.0-git
 [jan] Support multi-value RDNs in LDAP DN attributes (horde@iotti.biz, Request
       #11889).
 
+
 ------
 v4.2.6
 ------
 
+[jan] Don't try to load Content application if tags are disabled.
 [mjr] Fix adding tags to new contacts (Bug #13884).
 [jan] Fix waiting for replication on LDAP backend.
 
